--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
+    "css-loader": "^1.0.0",
     "react-alice-carousel": "^1.12.0",
     "react-hot-loader": "^4.3.11",
+    "style-loader": "^0.23.1",
     "webpack": "^4.22.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
