--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "howler": "^2.0.15",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "react-dom-confetti": "0.0.10",
     "react-howler": "^3.7.3",
     "react-pose": "^3.3.7",
     "react-pose-text": "^3.1.0",
